# jaxboy

./: LICENSE  README.md  cpu.py  pyproject.toml
src/jaxboy/: cpu.py
